<resources>
    <string name="app_name">P3175</string>

    <!--    FOR DATA-->

    <!--    admin-->
    <string name="admin_username">admin</string>

    <!--    db-->
    <string name="category_salary">Salary</string>
    <string name="category_bill">Bill</string>

    <!--    shared preferences-->
    <string name="shared_preference_name">sharedPref</string>
    <string name="logging_in_user_id">loggingInUserId</string>
    <string name="logged_in_user_id">loggedInUserId</string>
    <string name="last_login_date">lastLoginDate_</string>
    <string name="need_initialize">needInitialize_</string>
    <string name="need_change_password">needChangePassword_</string>

    <!--    intent extra-->
    <string name="current_user_id">currentUserId</string>
    <string name="transaction_id">transactionId</string>
    <string name="recurring_transaction_id">recurring_transaction_id</string>
    <string name="amount">amount</string>
    <string name="description">description</string>

    <!--    FOR VIEW-->

    <!--    menu item text-->
    <string name="menu_item_no_title"></string>
    <string name="menu_item_expense_tracker">Expense Tracker</string>
    <string name="menu_item_big_expense_planner">Big Expense Planner</string>
    <string name="menu_item_category">Category</string>
    <string name="menu_item_salary_bill">Salary and Bill</string>
    <string name="menu_item_setting">Account</string>
    <string name="menu_item_report">Report</string>
    <string name="menu_item_log_out">Log out</string>
    <string name="menu_item_add_savings">Add savings</string>

    <!--    title text-->
    <string name="title_first_login_set_password">Please set a new password</string>
    <string name="title_create_account">Create account</string>
    <string name="title_expense">Expense</string>
    <string name="title_income">Income</string>
    <string name="title_salary">Salary</string>
    <string name="title_bill">Bill</string>
    <string name="title_category">Category</string>
    <string name="title_recurring_transaction">Recurring Transaction</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_initialize">Setting money</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_big_expense">Big Expense</string>
    <string name="title_choose_big_expense_plan">Choose a plan</string>
    <string name="title_add_savings">Add savings</string>

    <!--    label text-->
    <string name="label_current_incomes">Current incomes</string>
    <string name="label_incomes_savings_ratio">Incomes savings ratio\n%1$d : %2$d</string>

    <string name="tab_report_text">Text</string>
    <string name="tab_report_line_chart">Line Chart</string>
    <string name="tab_report_pie_chart">Pie Chart</string>

    <string name="title_plan_incomes">Incomes</string>
    <string name="title_plan_savings">Savings</string>
    <string name="title_plan_loan">Loan</string>

    <!--    button text-->
    <string name="button_text_next">Next</string>
    <string name="button_text_create">Create</string>
    <string name="button_text_add">Add</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_login">Login</string>
    <string name="button_text_create_account">Create account</string>
    <string name="button_text_salary_bill">Manage Bill</string>
    <string name="radio_button_text_income">Income</string>
    <string name="radio_button_text_expense">Expense</string>
    <string name="radio_button_text_salary">Salary</string>
    <string name="radio_button_text_bill">Bill</string>
    <string name="switch_from_incomes">From incomes?</string>

    <!--    hint text-->
    <string name="hint_email">Email</string>
    <string name="hint_old_password">Old password</string>
    <string name="hint_password">Password</string>
    <string name="hint_verify_password">Verify password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_verify_new_password">Verify new password</string>
    <string name="hint_category_name">Category name</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_date">Date</string>
    <string name="hint_description">Description</string>
    <string name="hint_current_savings">Current savings</string>
    <string name="hint_salary">Salary</string>

    <!--    others-->
    <string name="description_salary">Salary</string>
    <string name="content_description_floating_button">Add</string>
    <string name="content_description_login_logo">Login logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>