<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.EditUserActivity">

    <EditText
        android:id="@+id/editTextEditUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditUserVerifyPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditUserOldPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEditUserOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditUserOldPassword" />

    <EditText
        android:id="@+id/editTextEditUserVerifyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_verify_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditUserOK"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditUserPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEditUserPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditUserPassword" />

    <EditText
        android:id="@+id/editTextEditUserOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditUserPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditUserEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEditUserEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditUserEmail" />

    <TextView
        android:id="@+id/textViewEditUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_create_account"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextEditUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditUserOldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditUserTitle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <Button
        android:id="@+id/buttonEditUserOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />
</androidx.constraintlayout.widget.ConstraintLayout>