<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.overview.AddSavingsActivity">

    <TextView
        android:id="@+id/textViewAddSavingsCurrentIncomesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_current_incomes"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/switchAddSavingsFromIncomes"
        app:layout_constraintStart_toStartOf="@+id/editTextAddSavingsAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddSavingsAmount" />

    <Switch
        android:id="@+id/switchAddSavingsFromIncomes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_from_incomes"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddSavingsOK"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddSavingsCurrentIncomesAmount"
        app:layout_constraintStart_toStartOf="@+id/textViewAddSavingsCurrentIncomesTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddSavingsCurrentIncomesTitle" />

    <EditText
        android:id="@+id/editTextAddSavingsAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textViewAddSavingsCurrentIncomesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddSavingsTitle" />

    <TextView
        android:id="@+id/textViewAddSavingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_savings"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAddSavingsCurrentIncomesAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAddSavingsCurrentIncomesTitle"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddSavingsAmount"
        app:layout_constraintTop_toTopOf="@+id/textViewAddSavingsCurrentIncomesTitle"
        tools:text="5000" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <Button
        android:id="@+id/buttonAddSavingsOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

</androidx.constraintlayout.widget.ConstraintLayout>